# SwanSong-Desktop

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  PRIVACY.md  Package.resolved  Package.swift  README.md  ROADMAP.md  SECURITY.md  SOURCE_PROVENANCE.md  SUPPORT.md
.codex/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: attest-release.yml  codeql.yml  publish-sparkle-appcast.yml  quality.yml  security.yml
Dependencies/: THIRD_PARTY_NOTICES.md  ares.lock.json  sparkle.lock.json  swansong-sdk.lock.json
Design/: ASSET_PROVENANCE.md  README.md
Design/PressKit/: README.md
Engine/: CMakeLists.txt  ares-headless.patch
Engine/Tests/: ares_smoke.cpp  v30_prefetch_origin_control.cpp
Fuzz/: EngineROMInspectionFuzzer.cpp
Packaging/: App.entitlements  AppIcon.icns  EngineService-AdHoc.entitlements  EngineService-Info.plist  EngineService.entitlements  Info.plist
Packaging/YokoiHardware/: NOTICE.md  manifest.json  yokoi-boot-installer.zlib.b64  yokoi-cart-service.zlib.b64
Scripts/: ares-source-state.sh  build-app.sh  build-engine.sh  check-app-bundle.sh  check-app-payload.sh  check-app-runtime.sh  check-app-source-provenance.sh  check-authorized-capture-plan-envelope.sh  check-av-soak.sh  check-compatibility-matrix.sh  check-engine-reproducibility.sh  check-homebrew-production-readiness.sh  check-image-opacity.swift  check-input-frame-bridge.sh  check-isolated-engine-service.sh  check-live-engine.sh  check-mcp-server.sh  check-no-password-prompts.sh  check-owned-rom-open-ipl.sh  check-owned-rom-smoke.sh  check-pcv2-translation-lab.sh  check-player-input.sh  check-player-window.sh  check-playtest-cli.sh  check-playtest-mcp-server.sh  check-release-metadata.sh  check-signed-source-probe-functional.py  check-signed-source-probe-helper.sh  check-source-archive-payload.sh  check-sparkle-configuration.sh  check-sparkle-dependency-lock.py  check-sparkle-framework.sh  check-swansong-sdk-payload.sh  check-translation-automation-cli.sh  check-translation-lab.sh  check-ui-snapshots.sh  check-yokoi-hardware-payload.py  classify-ci-changes.sh  generate-app-icons.sh  generate-pcv2-fixture.py  (+42 more)
Sources/CSwanEngine/: bridge_anchor.c  swan_engine.cpp  swan_engine_ares.cpp  swan_engine_backend.hpp  swan_engine_stub.cpp
Sources/SwanSongApp/: AppModel.swift  AudioOutput.swift  Branding.swift  CartridgeLabView.swift  ControllerInput.swift  HomebrewCatalogClient.swift  HomebrewCatalogHighWaterStore.swift  HomebrewCatalogProductionTrust.swift  LegalSupportView.swift  LocalMCPBridge.swift  MetalScreenView.swift  PocketCoreSetup.swift  RewindTimeRibbonView.swift  RootView.swift  ScreenshotExporter.swift  StoryForgeWorkspaceModel.swift  StoryForgeWorkspaceView.swift  SwanSDKWorkspaceModel.swift  SwanSDKWorkspaceView.swift  SwanSongApp.swift  SwanSongDesignSystem.swift  SwanSongLaunchRecovery.swift  SwanSongStatusItemController.swift  SwanSongSupportBundle.swift  SwanSongTaskNotifications.swift  SwanSongUpdater.swift  TranslationTextRecognizer.swift  TranslationVisualDivergenceRunner.swift  TranslationVisualDivergenceView.swift  WindowAccessor.swift
Sources/SwanSongChecks/: main.swift
Sources/SwanSongDifferential/: main.swift
Sources/SwanSongEngineService/: main.swift
Sources/SwanSongEnvironmentObserver/: main.swift
Sources/SwanSongKit/: ControllerProfile.swift  DataRootPolicy.swift  DisplayProfile.swift  EngineFramePNGCodec.swift  EngineServiceProtocol.swift  EngineSession.swift  FirmwareImporter.swift  FirmwareStore.swift  FrameActivityMonitor.swift  FrameAdvanceGate.swift  FrameDifferential.swift  FramePacing.swift  GameArchiveImporter.swift  GameArtwork.swift  GameConfidence.swift  GameDebugLog.swift  GameImport.swift  GameLibrary.swift  GameLibraryQuery.swift  HomebrewCatalog.swift  HomebrewCatalogCacheStore.swift  HomebrewCatalogSignature.swift  IsolatedEngineServiceClient.swift  LocalMCPAccess.swift  ManagedGameStore.swift  OpenIPL.swift  PlayerControlPolicy.swift  PlayerFailureState.swift  PlayerLaunchStage.swift  PlayerSessionFinalization.swift  PlayerWindowLayout.swift  PocketCoreInstaller.swift  PocketSave.swift  PublishedHomebrewCatalog.swift  RewindBuffer.swift  StoryForgeDesktopIntegration.swift  SwanSDKDesktopIntegration.swift  SwanSongAuthorizedPathPolicy.swift  SwanSongAuthorizedProcessEnvironment.swift  SwanSongPlaytester.swift  (+25 more)
Sources/SwanSongProbe/: main.swift
Sources/SwanSongRouteRunner/: AuthorizedCapturePlanEnvelope.swift  AuthorizedCapturePlanExecution.swift  AuthorizedSourceProbeEnvelope.swift  main.swift
Sources/SwanSongSoak/: main.swift
Sources/SwanSongTextIntakeChecks/: main.swift
Tests/SwanSongAppSnapshotTests/: AppModelControllerLifecycleTests.swift  AppModelHomebrewTransactionTests.swift  BrandingTests.swift  ControllerBatterySummaryTests.swift  HomebrewCatalogClientTests.swift  HomebrewCatalogHighWaterStoreTests.swift  HomebrewProductionReadinessTests.swift  LaunchRecoveryAndSupportTests.swift  LocalMCPBridgeTests.swift  PocketCoreArchiveExtractorTests.swift  PocketCoreReleaseServiceTests.swift  StoryForgeWorkspaceModelTests.swift  SwanSDKWorkspaceModelTests.swift  SwanSongTaskNotificationsTests.swift  SwanSongUpdaterTests.swift  (+4 more)
docs/: APP_UPDATES.md  BETA_TESTING.md  COMPATIBILITY.md  FAQ.md  INSTALL.md  MARKETING.md  README.md  RELEASE_PROCESS.md  RELEASE_TESTING.md  WIKI_PUBLISHING.md
updates/: appcast.xml
(+138 files in other folders)
